tutorial box shadow

--- a/AprendendoLayout/_CSS/dicionario.html
+++ b/AprendendoLayout/_CSS/dicionario.html
@@ -69,86 +69,103 @@
     <div id="corpo">
         <div id="container">
             <aside id="esquerda">
-                <h2>Dicionário CSS</h2>
                 <article>
-                        <table>
-                            <td>
-                                <p><b>background</b> - cor de fundo, imagem, transparência.</p>
-                                <p><b>background-attachment</b> - rolagem de fundo / marca d'água.</p>
-                                <p><b>background-image</b> - imagem de fundo.</p>
-                                <p><b>background-color</b> - cor de fundo ou transparência.</p>
-                                <p><b>background-position</b> - posicionamento da imagem de fundo.</p>
-                                <p><b>background-repeat</b> - configuração lado-a-lado da imagem de fundo.</p>
-                                <p><b>border</b> - largura, estilo e cor de todas as 4 bordas.</p>
-                                <p><b>border-bottom</b> - largura, estilo e cor da borda inferior.</p>
-                                <p><b>border-bottom-color</b> - cor da citada borda.</p>
-                                <p><b>border-bottom-style</b> - estilo da citada borda.</p>
-                                <p><b>border-bottom-width</b> - largura da citada borda.</p>
-                                <p><b>border-color</b> - cor das 4 bordas.</p>
-                                <p><b>border-left</b> - largura, estilo e cor da borda esquerda.</p>
-                                <p><b>border-left-color</b> - cor da borda citada.</p>
-                                <p><b>border-left-style</b> - estilo da borda citada.</p>
-                                <p><b>border-left-width</b> - largura da borda citada.</p>
-                                <p><b>border-right</b> - largura, estilo e cor da borda direita.</p>
-                                <p><b>border-right-color</b> - cor da borda citada.</p>
-                                <p><b>border-right-style</b> - estilo da borda citada.</p>
-                                <p><b>border-right-width</b> - largura da borda citada.</p>
-                                <p><b>border-style</b> - estilo de todas as 4 bordas.</p>
-                                <p><b>border-top</b> - largura, estilo e cor da borda superior.</p>
-                                <p><b>border-top-color</b> - cor da borda citada.</p>
-                                <p><b>border-top-style</b> - estilo da borda citada.</p>
-                                <p><b>border-top-width</b> - largura da borda citada.</p>
-                                <p><b>border-width</b> - largura de todas as 4 bordas.</p>
-                                <p><b>clear</b> - elementos flutuantes à esquerda ou à direita de um elemento.</p>
-                                <p><b>clip</b> - parte visível de um elemento.</p>
-                                <p><b>color</b> - cor de primeiro plano.</p>
-                                <p><b>column-count</b> - divide o conteúdo em colunas</p>
-                                <p><b>cursor</b> - tipo de ponteiro do mouse.</p>
-                                <p><b>display</b> - se o elemento é exibido e o espaço é reservado para ele.</p>
-                                <p><b>filter</b> - tipo de filtro aplicado ao elemento.</p>
-                                <p><b>float</b> - se o elemento flutua.</p>
-                                <p><b>font</b> - estilo, variante, peso, tamanho e altura da linha do tipo de fonte.</p>
-                                <p><b>font-face</b> - incorporação da fonte ao arquivo html.</p></td><td>
-                                <p><b>font-family</b> - tipo de fonte.</p>
-                                <p><b>font-size</b> tamanho da fonte.</p>
-                                <p><b>font-style</b> - fonte itálico.</p>
-                                <p><b>font-variant</b> - fonte bold.</p>
-                                <p><b>font-weight</b> - peso da fonte de claro a negrito.</p>
-                                <p><b>height</b> - altura exibida ao elemento.</p>
-                                <p><b>import</b> - folha de estilo a importar.</p>
-                                <p><b>left</b> - posição do elemento em relação a margem esquerda da página.</p>
-                                <p><b>letter-spacing</b> - distância entre as letras.</p>
-                                <p><b>line-height</b> - distância entre linhas de base.</p>
-                                <p><b>list-style</b> - tipo, imagem e posição do estilo da lista.</p>
-                                <p><b>list-style-image</b> - marcador de item de lista.</p>
-                                <p><b>list-style-position</b> - posição do marcador de item da lista.</p>
-                                <p><b>list-style-type</b> - marcador de item de lista alternativo.</p>
-                                <p><b>margin</b> - tamanho de todas as 4 margens.</p>
-                                <p><b>margin-left</b> - tamanho da margem esquerda.</p>
-                                <p><b>margin-right</b> - tamanho da margem direita.</p>
-                                <p><b>margin-bottom</b> - tamanho da margem inferior.</p>
-                                <p><b>margin-top</b> - tamanho da margem superior.</p>
-                                <p><b>overflow</b> - exibição de imagens que são maiores do que suas molduras.</p>
-                                <p><b>padding</b> - espaço em torno de um elemento em todos os lados.</p>
-                                <p><b>padding-bottom</b> - espaço à partir da margem inferior de um elemento.</p>
-                                <p><b>padding-left</b> - espaço à esquerda do elemento.</p>
-                                <p><b>padding-right</b> - espaço à direita do elemento.</p>
-                                <p><b>padding-top</b> - espaço à partir da margem superior do elemento.</p>
-                                <p><b>page-brake-after</b> - inserir quebra de página depois de um elemento.</p>
-                                <p><b>page-brake-before</b> - inserir quebra de página antes de um elemento.</p>
-                                <p><b>position</b> - como o elemento é posicionado na página.</p>
-                                <p><b>text-align</b> - alinhamento de texto.</p>
-                                <p><b>text-decoration</b> - sublinhado, sobrelinhado ou riscado.</p>
-                                <p><b>text-indent</b> - recuo da primeira linha do parágrafo.</p>
-                                <p><b>text-transform</b> - transformação para todas maiúsculas, minúsculas ou inicial maiúscula.</p>
-                                <p><b>top</b> - posição do elemento em relação a parte superior da página.</p>
-                                <p><b>vertical-align</b> - alinhamento vertical do elemento.</p>
-                                <p><b>visibility</b> - se o elemento é visível ou invisível.</p>
-                                <p><b>width</b> - largura do elemento.</p>
-                                <p><b>z-index</b> - posição do elemento na pilha.</p>
-                            </td>
-                        </table>
-                    </article>
+                    <h2>Dicionário CSS</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th><b>tag</b></th><th><b>significado</b></th><th><b>tag</b></th><th><b>significado</b></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><b>background</b></td><td>cor de fundo, imagem, transparência.</td>
+                                    <td><b>background-attachment</b></td><td>rolagem de fundo / marca d'água.</td>
+                            </tr>
+                            <tr>
+                                <td><b>background-image</b></td><td>imagem de fundo.</td>
+                                <td><b>background-color</b></td><td>cor de fundo ou transparência.</td>
+                            </tr>
+                            <tr>
+                                <td><b>background-position</b></td><td>posicionamento da imagem de fundo.</td>
+                                <td><b>background-repeat</b></td><td>configuração lado-a-lado da imagem de fundo.</td>
+                            </tr>
+                            <tr>
+                                <td><b>border</b></td><td>largura, estilo e cor de todas as 4 bordas.</td>
+                                <td><b>border-bottom</b></td><td>largura, estilo e cor da borda inferior.</td>
+                            </tr>
+                            <tr>
+                                <td><b>border-bottom-color</b></td><td>cor da citada borda.</td>
+                                <td><b>border-bottom-style</b></td><td>estilo da citada borda.</td>
+                            </tr>
+                            <tr>
+                                <td><b>border-bottom-width</b></td><td>largura da citada borda.</td>
+                                <td><b>border-color</b></td><td>cor das 4 bordas.</td>
+                            </tr>
+                            <tr>
+                                <td><b>border-left</b></td><td>largura, estilo e cor da borda esquerda.</td>
+                                <td><b>border-left-color</b></td><td>cor da borda citada.</td>
+                            </tr>
+                            <tr>
+                                <td><b>border-left-style</b></td><td>estilo da borda citada.</td>
+                                <td><b>border-left-width</b></td><td>largura da borda citada.</td>
+                            </tr>
+                            <b>border-right</b> - largura, estilo e cor da borda direita.                                <b>border-right-color</b> - cor da borda citada.
+                            <b>border-right-style</b> - estilo da borda citada.
+                            <b>border-right-width</b> - largura da borda citada.
+                            <b>border-style</b> - estilo de todas as 4 bordas.
+                            <b>border-top</b> - largura, estilo e cor da borda superior.
+                            <b>border-top-color</b> - cor da borda citada.
+                            <b>border-top-style</b> - estilo da borda citada.
+                            <b>border-top-width</b> - largura da borda citada.
+                            <b>border-width</b> - largura de todas as 4 bordas.
+                            <b>clear</b> - elementos flutuantes à esquerda ou à direita de um elemento.
+                            <b>clip</b> - parte visível de um elemento.
+                            <b>color</b> - cor de primeiro plano.
+                            <b>column-count</b> - divide o conteúdo em colunas
+                            <b>cursor</b> - tipo de ponteiro do mouse.
+                            <b>display</b> - se o elemento é exibido e o espaço é reservado para ele.
+                            <b>filter</b> - tipo de filtro aplicado ao elemento.
+                            <b>float</b> - se o elemento flutua.
+                            <b>font</b> - estilo, variante, peso, tamanho e altura da linha do tipo de fonte.
+                            <b>font-face</b> - incorporação da fonte ao arquivo html.
+                            <b>font-family</b> - tipo de fonte.
+                            <b>font-size</b> tamanho da fonte.
+                            <b>font-style</b> - fonte itálico.
+                            <b>font-variant</b> - fonte bold.
+                            <b>font-weight</b> - peso da fonte de claro a negrito.
+                            <b>height</b> - altura exibida ao elemento.
+                            <b>import</b> - folha de estilo a importar.
+                            <b>left</b> - posição do elemento em relação a margem esquerda da página.
+                            <b>letter-spacing</b> - distância entre as letras.                                <b>line-height</b> - distância entre linhas de base.
+                            <b>list-style</b> - tipo, imagem e posição do estilo da lista.
+                            <b>list-style-image</b> - marcador de item de lista.
+                            <b>list-style-position</b> - posição do marcador de item da lista.
+                            <b>list-style-type</b> - marcador de item de lista alternativo.
+                            <b>margin</b> - tamanho de todas as 4 margens.
+                            <b>margin-left</b> - tamanho da margem esquerda.
+                            <b>margin-right</b> - tamanho da margem direita.
+                            <b>margin-bottom</b> - tamanho da margem inferior.                               <b>margin-top</b> - tamanho da margem superior.
+                            <b>overflow</b> - exibição de imagens que são maiores do que suas molduras.
+                            <b>padding</b> - espaço em torno de um elemento em todos os lados.
+                            <b>padding-bottom</b> - espaço à partir da margem inferior de um elemento.
+                            <b>padding-left</b> - espaço à esquerda do elemento.
+                            <b>padding-right</b> - espaço à direita do elemento.
+                            <b>padding-top</b> - espaço à partir da margem superior do elemento.
+                            <b>page-brake-after</b> - inserir quebra de página depois de um elemento.                                <b>page-brake-before</b> - inserir quebra de página antes de um elemento.
+                            <b>position</b> - como o elemento é posicionado na página.
+                            <b>text-align</b> - alinhamento de texto.
+                            <b>text-decoration</b> - sublinhado, sobrelinhado ou riscado.
+                            <b>text-indent</b> - recuo da primeira linha do parágrafo.
+                            <b>text-transform</b> - transformação para todas maiúsculas, minúsculas ou inicial maiúscula.
+                            <b>top</b> - posição do elemento em relação a parte superior da página.
+                            <b>vertical-align</b> - alinhamento vertical do elemento.
+                            <b>visibility</b> - se o elemento é visível ou invisível.
+                            <b>width</b> - largura do elemento.
+                            <b>z-index</b> - posição do elemento na pilha.
+                        </tbody>
+                    </table>
+                </article>
             </aside>
             <section id="principal">
                 <article>
