--- a/AprendendoLayout/_CSS/videos.html
+++ b/AprendendoLayout/_CSS/videos.html
@@ -78,6 +78,8 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/yE_CKgG9gcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <h3>Load CSS</h3>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/YG_cJCPk7wc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h3>Como fazer box shadow em CSS</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Qq-6Zrfewng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </article>
             </aside>
             <section id="principal">
